style: Consistently use double equal for string comparison in bash script

--- a/.github/actions/control-instance/action.yml
+++ b/.github/actions/control-instance/action.yml
@@ -147,7 +147,7 @@ runs:
 
             echo -n "status [$status]. "
 
-            if [[ "$status" = "$EXPECTED_STATUS" ]]; then
+            if [[ "$status" == "$EXPECTED_STATUS" ]]; then
                 echo "Exiting loop."
                 break
             else
