fix(actions/control-instance): Attempt to fix timeout bumping shelve max wait
Since shelving may take more than 5 minutes, conditionally bump the corresponding
max wait time.

--- a/.github/actions/control-instance/action.yml
+++ b/.github/actions/control-instance/action.yml
@@ -134,9 +134,13 @@ runs:
 
         source ~/venv/bin/activate
 
-        echo Polling "$INSTANCE_NAME" status
-
         max_wait_time=300  # Maximum wait time in seconds (300s -> 5mins)
+        if [[ "$EXPECTED_STATUS" == "SHELVED_OFFLOADED" ]]; then
+          max_wait_time=600  # Maximum wait time in seconds (600s -> 10mins)
+        fi
+
+        echo "Polling '$INSTANCE_NAME' status [max_wait_time=${max_wait_time}s]"
+
         wait_interval=5    # Interval between status checks in seconds
         total_wait_time=0
 
