--- a/.github/workflows/automatic-instance-shelving.yml
+++ b/.github/workflows/automatic-instance-shelving.yml
@@ -23,8 +23,6 @@ jobs:
 
       - name: Auto Shelve
         run: |
-          export OS_CLOUD=BIO180006_IU # Select openstack auth settings defined in ".config/openstack/clouds.yaml"
-
           source ~/venv/bin/activate
 
           instance_prefix=${PREFIX:+${PREFIX}_}
@@ -101,6 +99,7 @@ jobs:
               fi
             done
         env:
+          OS_CLOUD: ${{ vars.MORPHOCLOUD_OS_CLOUD }}
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
           GH_REPO: ${{ github.repository }}
           PREFIX: ${{ vars.INSTANCE_NAME_PREFIX }}
