--- a/.github/workflows/update-request-status-label.yml
+++ b/.github/workflows/update-request-status-label.yml
@@ -17,8 +17,6 @@ jobs:
 
       - name: Update issues
         run: |
-          export OS_CLOUD=BIO180006_IU # Select openstack auth settings defined in ".config/openstack/clouds.yaml"
-
           source ~/venv/bin/activate
 
           instance_prefix=${PREFIX:+${PREFIX}_}
@@ -43,6 +41,7 @@ jobs:
               gh issue edit ${issue_number} --add-label "${add_label}" --remove-label "${remove_labels}"
             done
         env:
+          OS_CLOUD: ${{ vars.MORPHOCLOUD_OS_CLOUD }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           PREFIX: ${{ vars.INSTANCE_NAME_PREFIX }}
