--- a/.github/actions/check-volume-exists/action.yml
+++ b/.github/actions/check-volume-exists/action.yml
@@ -1,6 +1,11 @@
 name: "Check volume exists"
 description: "Check volume exists"
 inputs:
+  os_cloud:
+    description:
+      "Name of the OpenStack cloud allocation to select openstack auth settings
+      defined in '.config/openstack/clouds.yaml'"
+    required: true
   volume_name:
     description: "Name of the volume"
     required: true
@@ -15,8 +20,6 @@ runs:
       id: check_volume
       shell: bash
       run: |
-        export OS_CLOUD=BIO180006_IU # Select openstack auth settings defined in ".config/openstack/clouds.yaml"
-
         source ~/venv/bin/activate
 
         volume=$(openstack volume list -f json | \
@@ -30,4 +33,5 @@ runs:
         echo "exists [$exists]"
         echo "exists=$exists" >> $GITHUB_OUTPUT
       env:
+        OS_CLOUD: ${{ inputs.os_cloud }}
         VOLUME_NAME: ${{ inputs.volume_name }}
