--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -88,6 +88,7 @@ jobs:
         if: ${{ steps.command.outputs.continue == 'true' }}
         uses: ./.github/actions/control-instance
         with:
+          os_cloud: ${{ vars.MORPHOCLOUD_OS_CLOUD }}
           issue_number: ${{ github.event.issue.number }}
           command_name: ${{ steps.command.outputs.command_name }}
           instance_name_prefix: ${{ vars.INSTANCE_NAME_PREFIX }}
