feat: Set "github/command" allowlist through repository variable
Generalize configuration of admins introducing the MORPHOCLOUD_GITHUB_ADMINS
repository variable.

--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -26,7 +26,9 @@ jobs:
           reaction: "rocket"
           allowed_contexts: "issue"
           permissions: "read,triage,write,maintain,admin"
-          allowlist: "jcfr,muratmaga,${{ github.event.issue.user.login }}"
+          allowlist:
+            "${{ vars.MORPHOCLOUD_GITHUB_ADMINS }},${{
+            github.event.issue.user.login }}"
 
       - name: shelve command
         id: shelve_command
@@ -36,7 +38,9 @@ jobs:
           reaction: "rocket"
           allowed_contexts: "issue"
           permissions: "read,triage,write,maintain,admin"
-          allowlist: "jcfr,muratmaga,${{ github.event.issue.user.login }}"
+          allowlist:
+            "${{ vars.MORPHOCLOUD_GITHUB_ADMINS }},${{
+            github.event.issue.user.login }}"
 
       - name: delete command
         id: delete_command
@@ -46,7 +50,7 @@ jobs:
           reaction: "rocket"
           allowed_contexts: "issue"
           permissions: "write,maintain,admin"
-          allowlist: "jcfr,muratmaga"
+          allowlist: "${{ vars.MORPHOCLOUD_GITHUB_ADMINS }}"
 
       - name: Set command metadata
         id: command
