--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -19,7 +19,9 @@ jobs:
           reaction: "rocket"
           allowed_contexts: "issue"
           permissions: "read,triage,write,maintain,admin"
-          allowlist: "jcfr,muratmaga,${{ github.event.issue.user.login }}"
+          allowlist:
+            "${{ vars.MORPHOCLOUD_GITHUB_ADMINS }},${{
+            github.event.issue.user.login }}"
 
       - uses: actions/checkout@v4
 
