feat: Support setting GitHub admin emails through repository variable
Generalize configuration of admin emails introducing the MORPHOCLOUD_GITHUB_ADMIN_EMAILS
repository variable.

--- a/.github/workflows/request-notify-admin.yml
+++ b/.github/workflows/request-notify-admin.yml
@@ -47,7 +47,7 @@ jobs:
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
           from: ${{ github.event.repository.name }}
-          to: maga@uw.edu,jcfr@kitware.com
+          to: ${{ vars.MORPHOCLOUD_GITHUB_ADMIN_EMAILS }}
           subject:
             "[${{ github.event.repository.name }}] Approval requested for
             Instance ${{ steps.define.outputs.instance_name }}"
