fix: Limit concurrent runs of the same scheduled workflow
Ensure only one instance of a scheduled workflow runs concurrently for
a given cloud allocation. To allow concurrent workflows when associated
with different allocations, the concurrency group is based on both
the workflow name and the cloud allocation name.

--- a/.github/workflows/collect-instance-uptime.yml
+++ b/.github/workflows/collect-instance-uptime.yml
@@ -5,6 +5,10 @@ on:
     - cron: "* * * * *"
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ vars.MORPHOCLOUD_OS_CLOUD }}
+  cancel-in-progress: true
+
 jobs:
   collect-instance-uptime:
     runs-on: self-hosted
