--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -25,14 +25,6 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Extract fields
-        id: extract
-        uses: ./.github/actions/extract-issue-fields
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          issue_number: ${{ github.event.issue.number }}
-
       - name: Define instance name
         id: define
         uses: ./.github/actions/define-instance-name
@@ -62,76 +54,29 @@ jobs:
 
             See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
-      - name: Retrieve metadata
-        id: instance_metadata
-        uses: ./.github/actions/retrieve-metadata
-        with:
-          os_cloud: ${{ vars.MORPHOCLOUD_OS_CLOUD }}
-          instance_name: ${{ steps.define.outputs.instance_name }}
-
-      - name: comment (failed to retrieve instance metadata)
-        if: ${{ steps.instance_metadata.outcome == 'failure' && failure() }}
-        uses: peter-evans/create-or-update-comment@v4.0.0
-        with:
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            ### Command Results ❌
-
-            `email` command failed to retrieve metadata for **${{ steps.define.outputs.instance_name }}** instance.
-
-            See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-      - name: Generate Guacamole Connection URL
-        id: guacamole
-        uses: ./.github/actions/generate-connection-url
-        with:
-          instance_ip: ${{ steps.instance_metadata.outputs.instance_ip }}
-
-      - name: comment (failed to generate connection URL)
-        if: ${{ steps.guacamole.outcome == 'failure' && failure() }}
-        uses: peter-evans/create-or-update-comment@v4.0.0
-        with:
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            ### Command Results ❌
-
-            `email` command failed to generate connection URL for instance **${{ steps.define.outputs.instance_name }}**.
-
-            See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-      - name: Check if email is encoded
-        id: check_email_encryption
-        run: |
-          if [[ "$EMAIL" != *"@"* ]]; then
-            encoded="true"
-          else
-            encoded="false"
-          fi
-          echo "encoded=$encoded" >> $GITHUB_OUTPUT
-        env:
-          EMAIL: ${{ steps.extract.outputs.email }}
-
-      - name: Decode email
-        id: decode_email
-        uses: ./.github/actions/encode-decode-string
-        with:
-          input_string: ${{ steps.extract.outputs.email }}
-          encryption_key: ${{ secrets.STRING_ENCRYPTION_KEY }}
-          operation: "decode"
-          skip: ${{ steps.check_email_encryption.outputs.encoded == 'false' }}
-
-      - name: Send mail (completed)
+      - name: Send mail
         id: send_email
         uses: ./.github/actions/send-email
         with:
-          to: ${{ steps.decode_email.outputs.output_string }}
-          mail_server_username: ${{secrets.MAIL_USERNAME}}
-          mail_server_password: ${{secrets.MAIL_PASSWORD}}
+          os_cloud: ${{ vars.MORPHOCLOUD_OS_CLOUD }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          string_encryption_key: ${{ secrets.STRING_ENCRYPTION_KEY }}
+          mail_server_username: ${{ secrets.MAIL_USERNAME }}
+          mail_server_password: ${{ secrets.MAIL_PASSWORD }}
           instance_name: ${{ steps.define.outputs.instance_name }}
           instance_issue_number: ${{ github.event.issue.number }}
-          connection_url: ${{ steps.guacamole.outputs.connection_url }}
-          instance_ip: ${{ steps.instance_metadata.outputs.instance_ip }}
-          instance_pwd: ${{ steps.instance_metadata.outputs.instance_pwd }}
+
+      - name: command results comment (failed)
+        if: ${{ steps.send_email.outcome == 'failure' && failure() }}
+        uses: peter-evans/create-or-update-comment@v4.0.0
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            ### Command Results ❌
+
+            `email` command failed to be applied to **${{ steps.define.outputs.instance_name }}** instance. ${{ steps.send_email.outputs.error_message }}
+
+            See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: command results comment (success)
         if: ${{ steps.send_email.outcome == 'success' && success() }}
