--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -96,3 +96,7 @@ jobs:
           issue_number: ${{ github.event.issue.number }}
           command_name: ${{ steps.command.outputs.command_name }}
           instance_name_prefix: ${{ vars.INSTANCE_NAME_PREFIX }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          string_encryption_key: ${{ secrets.STRING_ENCRYPTION_KEY }}
+          mail_server_username: ${{secrets.MAIL_USERNAME}}
+          mail_server_password: ${{secrets.MAIL_PASSWORD}}
