fix(send-email): Use "active" in email subject instead of "created"
Since the email can be sent after either instance creation or unshelving,
"active" more accurately reflects the current state of the instance,
regardless of how it reached that state.

--- a/.github/actions/send-email/action.yml
+++ b/.github/actions/send-email/action.yml
@@ -87,7 +87,7 @@ runs:
         to: ${{ steps.decode_email.outputs.output_string }}
         subject:
           "[${{ github.event.repository.name }}] Instance ${{
-          inputs.instance_name }} created"
+          inputs.instance_name }} active"
         convert_markdown: true
         html_body: |
           Your MorphoCloud instance is up and running:
