--- a/.github/actions/send-email/action.yml
+++ b/.github/actions/send-email/action.yml
@@ -75,6 +75,15 @@ runs:
         operation: "decode"
         skip: ${{ steps.check_email_encryption.outputs.encoded == 'false' }}
 
+    - name: Read issue-commands.md
+      id: read_issue_commands
+      shell: bash
+      run: |
+        echo "content<<EOF" >> $GITHUB_OUTPUT
+        # Read file content expect the first 2 lines with the header
+        tail -n +3 issue-commands.md
+        echo "EOF" >> $GITHUB_OUTPUT
+
     - name: Send mail
       uses: dawidd6/action-send-mail@2cea9617b09d79a095af21254fbcb7ae95903dde # v3.12.0
       with:
@@ -117,6 +126,10 @@ runs:
 
           - Username: **exouser**
           - Passphrase: `${{ steps.instance_metadata.outputs.instance_pwd }}`
+
+          **Supported Issue Commands:**
+
+          ${{ steps.read_issue_commands.outputs.content }}
 
     - name: Set error message
       id: set_error_message
